added test case for get user profile data

--- a/src/app/layout/user-profile/user-profile.component.html
+++ b/src/app/layout/user-profile/user-profile.component.html
@@ -2,13 +2,13 @@
   <div class="card" style="width: 18rem">
     <img
       class="card-img-top"
-      [src]="usesProfile?.profileImg"
+      [src]="userProfile?.profileImg"
       alt="User Image"
     />
     <div class="card-body">
-      <h5 class="card-title">{{ usesProfile?.name }}</h5>
+      <h5 class="card-title">{{ userProfile?.name }}</h5>
       <p class="card-text">
-        {{ usesProfile?.email }}
+        {{ userProfile?.email }}
       </p>
     </div>
   </div>
